reiniciar partida (simple)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">Solitario Celta</string>
 
     <string name="txtSinImplementar">¡No implementado aún!</string>
+    <string name="txtPrueba">Prueba</string>
 
     <!-- Opciones -->
     <string name="txtReiniciarPartida">Reiniciar</string>
