--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
 <resources>
 
     <string name="app_name">Solitario Celta</string>
+    <string name="default_NombreFich">save.txt</string>
+    <string name="ficheroNotFound">Error, archivo no encontrado</string>
 
     <string name="txtSinImplementar">¡No implementado aún!</string>
     <string name="txtPrueba">Prueba</string>
@@ -13,10 +15,22 @@
     <string name="txtOpcionMejoresResultados">Mejores Resultados</string>
 
     <!-- Reiniciar Partida -->
-    <string name="txtReiniciarTitulo">Reiniciar partida</string>
+    <string name="txtReiniciarTitulo">Reiniciar Partida</string>
     <string name="txtReiniciarPregunta">¿Desea reiniciar la partida?</string>
     <string name="txtReiniciarAfirmativo">Sí</string>
     <string name="txtReiniciarNegativo">No</string>
+
+    <!-- Guardar Partida -->
+    <string name="txtPartidaGuardada">Partida guardada con éxito</string>
+    <string name="txtPartidaNoGuardada">La partida no ha podido guardarse</string>
+
+    <!-- Cargar Partida -->
+    <string name="txtCargarPartidaTitulo">Cargar Partida</string>
+    <string name="txtCargarPartidaPregunta">¿Desea cargar una partida? Se perderán los cambios realizados</string>
+    <string name="txtCargarPartidaAfirmativo">Sí</string>
+    <string name="txtCargarPartidaNegativo">No</string>
+    <string name="txtPartidaCargada">Partida cargada</string>
+    <string name="txtPartidaNoCargada">Error al cargar la partida</string>
 
     <!-- Diálogo Final -->
     <string name="txtDialogoFinalTitulo">Fin del juego</string>
