Añadir actividad y Adaptador - clases y layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,15 @@
     <string name="default_NombreJugador">Jugador 0</string>
     <string name="txtGuardarBaseDatos">Puntuación guardada en la base de datos</string>
 
+    <!-- Diálogo Borrar Resultados -->
+    <string name="txtBorrarResultados">Borrar Resultados</string>
+    <string name="txtBorrarPregunta">¿Desea borrar el historial de resultados?</string>
+    <string name="txtBorrarResultadosAfirmativo">Sí</string>
+    <string name="txtBorrarResultadosNegativo">No</string>
+    <string name="txtResultadosBorrados">Resulados Borrados</string>
+    <string name="txtResultadosNoBorrados">Error al borrar resultados</string>
+
+
     <!-- Diálogo Final -->
     <string name="txtDialogoFinalTitulo">Fin del juego</string>
     <string name="txtDialogoFinalPregunta">¿Desea jugar otra partida?</string>
